assets/css/portfolio.css
@import "bootstrap.min.css";

/*
-------------------------------------------------------------------------
Resets
------------------------------------------------------------------------ */

ul {
  margin: 0;
  padding: 0;
}

.target{
  display: none;
}

/*
-------------------------------------------------------------------------
Typography
------------------------------------------------------------------------ */
h1 {
  font-family: 'Open Sans', sans-serif;
  font-weight: bold;
  color: #06807F;
}

h2 {
  font-family: 'Open Sans', sans-serif;
  font-weight: bold;
  color: #06807F;
}

h3 {
  font-family: 'Open Sans', sans-serif;
  font-weight: lighter;
  text-transform: uppercase;
  letter-spacing: 0.25em;
  color: #95A5A6;
}

h6 {
  font-weight: bolder;
}

p {
  font-family: 'Open Sans', sans-serif;
  font-weight: normal;
}

a {
  color: #95A5A6;
}

a:visited{
  color: #06807F;
}

.publication-name{
  font-family: 'Open Sans', sans-serif;
  font-weight: normal;
  color: #06807F;
  font-size: 1.5em;
}

.title-and-dates{
    font-family: 'Open Sans', sans-serif;
    font-weight: 300;
    text-transform: uppercase;
    letter-spacing: 0.25em;
    font-size: 13.7136px;
}

li{
  list-style: none;
}

.about-body{
  padding-top: 40px;
  margin: 0 auto;
  width: 52.25em;
}

.work-body{
  padding-top: 40px;
  margin: 0 auto;
  width: 52.25em;
}

.resume-spacing{
  padding-top: 20px;
}

/*
-------------------------------------------------------------------------
Media
------------------------------------------------------------------------ */
img,
iframe,
video,
svg {
    display: block;
    max-width: 100%;
}

img.displayed {
    display: block;
    margin-left: auto;
    margin-right: auto;
  }

/*
-------------------------------------------------------------------------
Navigation and footer
------------------------------------------------------------------------ */
nav {
  padding-top: 40px;
  padding-bottom: 40px;
}

.primary-nav {
  padding-top: 20px;
  padding-bottom: 40px;
  width: 100%;
  align-items: center;
}

.primary-nav li {
  float: left;
  list-style: none;
  border-right: 1px solid #000000;
  text-align: center;
}

.primary-nav a {
  font-family: 'Open Sans', sans-serif;
  font-weight: lighter;
  text-transform: uppercase;
  text-decoration: none;
  letter-spacing: 0.25em;
  color: #95A5A6;
}

.primary-nav a:hover {
  color: #06807F;
  font-weight: bold;
  text-decoration: none;
}

#selected-page {
  color: #06807F;
  font-weight: bold;
  text-decoration: none;
}

#last-nav{
  border-right: none;
}

.footer-icons{
  color: #06807F;
  text-align: right;
  padding-top: 50px;
}

#copyright{
  text-align:left;
}

button{
  color: #06807F;
  background-color: #FFFFFF;
  outline-style:none;
}


/*
-------------------------------------------------------------------------
test stuff
------------------------------------------------------------------------ */

.text-over-picture {
  background-color: #D0DDDD;
  font-family: 'Open Sans', sans-serif;
  text-align: center;
  padding-top: 5px;
  padding-bottom: 5px;
  text-decoration: none;
}

.text-over-picture .text {
    font-family: 'Open Sans', sans-serif;
    font-weight: bold;
    color: #06807F;
    text-decoration: none;
      font-size: 25px;
}

/*
NEED LINKS TO STAY COLOR WHEN SELECTED
 color: #06807F;
font-weight: bold;
text-decoration: none; */

